test/fail/classes/self_outside_class.lily
#[
SyntaxError: 'self' must be used within a class.
    from self_outside_class.lily:6:
]#

self
